# todo-fastapi

./: .gitignore  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/auth/: dependencies.py  exceptions.py  routers.py  schemas.py  services.py
backend/core/dependencies/: database.py  redis.py
backend/core/models/: base.py
backend/core/repositories/: database_base.py  redis_base.py
backend/core/utils/: jwt.py  password.py
backend/core/validators/: password.py
backend/migrations/: env.py
backend/migrations/versions/: 4c8641c9ecd1_.py  c6afaf569c7b_create_user_model.py  ee958b1d331c_create_user_model.py
backend/src/: database.py  redis.py  settings.py
backend/users/: dependencies.py  models.py  repositories.py  routers.py  schemas.py  services.py
